[gd_scene load_steps=7 format=2]

[ext_resource path="res://actors/character/snowman/Snowman.tscn" type="PackedScene" id=1]
[ext_resource path="res://assets/tilesets/Tileset.tres" type="TileSet" id=2]
[ext_resource path="res://assets/tilesets/Big-Tileset.png" type="Texture" id=3]
[ext_resource path="res://scenes/levels/LivingRoom/Dialogue.gd" type="Script" id=4]
[ext_resource path="res://assets/tilesets/Dialogue.png" type="Texture" id=5]

[sub_resource type="RectangleShape2D" id=1]


[node name="ChimneyDescent2" type="Node"]

[node name="Snowman" parent="." instance=ExtResource( 1 )]
position = Vector2( 10.2885, 418.399 )
z_index = 1

[node name="TileMap(structure)(0)" type="TileMap" parent="."]
tile_set = ExtResource( 2 )
format = 1
tile_data = PoolIntArray( 131071, 11, 0, 65536, 11, 0, 65537, 11, 0, 65538, 11, 0, 65539, 11, 0, 65540, 11, 0, 65541, 11, 0, 65542, 11, 0, 65543, 11, 0, 65544, 11, 0, 65545, 11, 0, 65546, 11, 0, 65547, 11, 0, 196607, 11, 0, 131083, 11, 0, 262143, 11, 0, 196619, 11, 0, 327679, 11, 0, 262155, 11, 0, 393215, 11, 0, 327691, 11, 0, 458751, 11, 0, 393224, 13, 0, 393225, 15, 0, 393226, 14, 0, 393227, 11, 0, 524287, 11, 0, 458752, 7, 0, 458753, 7, 0, 458754, 7, 0, 458755, 7, 0, 458756, 7, 0, 458757, 7, 0, 458758, 7, 0, 458759, 7, 0, 458760, 7, 0, 458761, 7, 0, 458762, 7, 0, 458763, 11, 0, 589823, 11, 0, 524288, 11, 0, 524289, 11, 0, 524290, 11, 0, 524291, 11, 0, 524292, 11, 0, 524293, 11, 0, 524294, 11, 0, 524295, 11, 0, 524296, 11, 0, 524297, 11, 0, 524298, 11, 0, 524299, 11, 0 )

[node name="TileMap(Background)(-2)" type="TileMap" parent="."]
z_index = -2
tile_set = ExtResource( 2 )
format = 1
tile_data = PoolIntArray( 131072, 31, 0, 131073, 31, 0, 131074, 31, 0, 131075, 31, 0, 131076, 31, 0, 131077, 31, 0, 131078, 31, 0, 131079, 31, 0, 131080, 31, 0, 131081, 31, 0, 131082, 31, 0, 196608, 31, 0, 196609, 31, 0, 196610, 31, 0, 196611, 31, 0, 196612, 31, 0, 196613, 31, 0, 196614, 31, 0, 196615, 31, 0, 196616, 31, 0, 196617, 31, 0, 196618, 31, 0, 262144, 31, 0, 262145, 31, 0, 262146, 31, 0, 262147, 31, 0, 262148, 31, 0, 262149, 31, 0, 262150, 31, 0, 262151, 31, 0, 262152, 31, 0, 262153, 31, 0, 262154, 31, 0, 327680, 31, 0, 327681, 31, 0, 327682, 31, 0, 327683, 31, 0, 327684, 31, 0, 327685, 31, 0, 327686, 31, 0, 327687, 31, 0, 327688, 31, 0, 327689, 31, 0, 327690, 31, 0, 393216, 31, 0, 393217, 31, 0, 393218, 31, 0, 393219, 31, 0, 393220, 31, 0, 393221, 31, 0, 393222, 31, 0, 393223, 31, 0, 393224, 31, 0, 393225, 31, 0, 393226, 31, 0, 458752, 31, 0, 458753, 31, 0, 458754, 31, 0, 458755, 31, 0, 458756, 31, 0, 458757, 31, 0, 458758, 31, 0, 458759, 31, 0, 458760, 31, 0, 458761, 31, 0, 458762, 31, 0 )

[node name="TileMap(Background)(-1)" type="TileMap" parent="."]
z_index = -1
tile_set = ExtResource( 2 )
format = 1
tile_data = PoolIntArray( 0, 262151, 0, 35, 0, 0, 262150, 36, 0 )

[node name="Chimney" type="Sprite" parent="."]
position = Vector2( 20, 129.142 )
scale = Vector2( 2.7067, 2.49626 )
texture = ExtResource( 3 )
centered = false
region_enabled = true
region_rect = Rect2( 128, 0, 128, 128 )

[node name="Christmas Tree" type="Sprite" parent="."]
position = Vector2( 520, 130 )
scale = Vector2( 2.7067, 2.49626 )
texture = ExtResource( 3 )
centered = false
region_enabled = true
region_rect = Rect2( 64, 0, 64, 128 )

[node name="Dialogue" type="Area2D" parent="."]
position = Vector2( 512, 320 )
collision_layer = 0
collision_mask = 1024
script = ExtResource( 4 )

[node name="Success" type="Sprite" parent="Dialogue"]
visible = false
texture = ExtResource( 5 )
region_enabled = true
region_rect = Rect2( 0, 448, 128, 64 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Dialogue"]
position = Vector2( 64, 32 )
scale = Vector2( 20, 10 )
shape = SubResource( 1 )

[node name="EButtonTree" type="Sprite" parent="Dialogue"]
visible = false
position = Vector2( 8, 40 )
texture = ExtResource( 5 )
region_enabled = true
region_rect = Rect2( 0, 16, 16, 16 )

[node name="Timer" type="Timer" parent="Dialogue"]

[connection signal="area_entered" from="Dialogue" to="Dialogue" method="_on_Dialogue_area_entered"]
[connection signal="area_exited" from="Dialogue" to="Dialogue" method="_on_Dialogue_area_exited"]
